@@ -943,7 +943,7 @@ is one of:
 .br
 .BR \f2store\fP "* " constructor " [" ( [ \f2args\fP ] ) ]
 .br
-.RB [ virtual "] " destructor
+.RB [ virtual "] " destructor " [" () ]
 .br
 .BR \f2store\fP "* " \f2fn-qual\fP "* [[" non- "]" member "] " function " [" ( [ \f2args\fP ] ) "] [" returning " \f2english\fP" "" "]"
 .br
