@@ -1,7 +1,7 @@
 english:
   <store>* <cv-qual>* array [<number>] of <english>
   <store>* constructor [([<args>])]
-  [virtual] destructor
+  [virtual] destructor [()]
   <store>* <fn-qual>* [[non-]member] function [([<args>])] [returning <english>]
   <store>* <fn-qual>* [[non-]member] operator [([<args>])] [returning <english>]
   <store>* <cv-qual>* pointer to [member of { class | struct } <name>] <english>
